nc real dataset

--- a/configs/dataset.yaml
+++ b/configs/dataset.yaml
@@ -40,3 +40,55 @@ bbbp:
   <<: *common_params
   groundtruth: "False"
   explained_target: 1
+
+
+common_params_syn: &common_params_syn
+  groundtruth: "True"
+  graph_classification: "False"
+  num_layers: 3
+  hidden_dim: 20
+  num_epochs: 1000
+  lr: 0.001
+  weight_decay: 0.005
+  dropout: 0.0
+  readout: "identity"
+  unseen: "False"
+
+ba_house:
+  <<: *common_params_syn
+
+ba_bottle:
+  <<: *common_params_syn
+
+tree_grid:
+  <<: *common_params_syn
+
+tree_cycle:
+  <<: *common_params_syn
+
+ba_grid:
+  <<: *common_params_syn
+
+ba_community:
+  <<: *common_params_syn
+
+common_params_citation: &common_params_citation
+  groundtruth: "False"
+  graph_classification: "False"
+  num_layers: 2
+  hidden_dim: 16
+  num_epochs: 200
+  lr: 0.01
+  weight_decay: 0.0005
+  dropout: 0.5
+  readout: "identity"
+  unseen: "False"
+
+cora:
+  <<: *common_params_citation
+
+citeseer:
+  <<: *common_params_citation
+
+pubmed:
+  <<: *common_params_citation
